Catalog Image Aspect Ratio

--- a/projects/DesignElement.html
+++ b/projects/DesignElement.html
@@ -223,7 +223,7 @@
 </div>
 <script>
     var imagePath = 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSPyBUL4txFmwhZ8Xr7JpRt_YMOZFLws11Wfw&usqp=CAU';
-    var gitName = 'itsrealkaran';
+    var gitName = 'notsoocool';
     var button = document.getElementById('button'); // Assumes element with id='button'
 
     button.onclick = function() {
