--- a/projects/animatedportfolio.html
+++ b/projects/animatedportfolio.html
@@ -813,8 +813,8 @@
 
     </script>
     <script>
-        var imagePath = 'https://drive.google.com/file/d/1WwYC4aUCbHMP6uhj3nBEJ0w8Y2P_4kKW/view?usp=drivesdk';
-        var gitName = 'https://github.com/Alok-2003/';
+        var imagePath = 'https://drive.google.com/uc?export=view&id=1WwYC4aUCbHMP6uhj3nBEJ0w8Y2P_4kKW';
+        var gitName = 'Alok-2003';
     </script>
 </body>
 
