--- a/projects/sukhman-23bcs10040.html
+++ b/projects/sukhman-23bcs10040.html
@@ -405,7 +405,7 @@
     </script>
 
     <script>
-        var imagePath = 'https://drive.google.com/file/d/1VK0NFhjEw0fsczGuFJEIVFH6ZVLhrdtO/view?usp=sharing';
+        var imagePath = 'https://drive.google.com/uc?export=view&id=1VK0NFhjEw0fsczGuFJEIVFH6ZVLhrdtO';
         var gitName = 'HEYSUKH';
     </script>
 
